--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                 </ul>
             </nav>
             <ul class="list list-link">
-                <li class="cont-link"><a href="mailto:info@devstudio.com" class="link contact-link">info@devstudio.com</a></li>
-                <li class="cont-link"><a href="tel:+380961111111" class="link contact-link">+38 096 111 11 11</a></li>
+                <li class="cont-link logo-mail"><a href="mailto:info@devstudio.com" class="link contact-link">info@devstudio.com</a></li>
+                <li class="cont-link logo-phone"><a href="tel:+380961111111" class="link contact-link">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
 
     <main>
-        <section class="big-title">
+        <section class="hero">
         <div class="container hero-content">
             <h1 class="page-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="btn">Заказать услугу</button>
@@ -113,6 +113,21 @@
                         <h3 class="command-name">Михаил Ермаков</h3>
                         <p lang="en" class="command-jobs">UI Designer</p>
                     </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="section clients">
+            <div class="container">
+            <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="list clients-item">
+                    <li class="clients-companies"></li>
+                    <li class="clients-companies"></li>
+                    <li class="clients-companies"></li>
+                    <li class="clients-companies"></li>
+                    <li class="clients-companies"></li>
+                    <li class="clients-companies"></li> 
+
                 </ul>
             </div>
         </section>
