--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
         <section class="section features">
             <div class="container features-container">
                 <ul class="list features-item">
-                    <li class=features-list>
+                    <li class="features-list">
                         <h3 class="features-scroll">Внимание к деталям</h3>
                         <p class="features-description">
                             Идейные соображения, а также начало повседневной работы по
                             формированию позиции.
                         </p>
                     </li>
-                    <li class=features-list>
+                    <li class="features-list">
                         <h3 class="features-scroll">Пунктуальность</h3>
                         <p class="features-description">
                             Задача организации, в особенности же рамки и место обучения кадров
                             влечет за собой.
                         </p>
                     </li>
-                    <li class=features-list>
+                    <li class="features-list">
                         <h3 class="features-scroll">Планирование</h3>
                         <p class="features-description">
                             Равным образом консультация с широким активом в значительной
                             степени обуславливает.
                         </p>
                     </li>
-                    <li class=features-list>
+                    <li class="features-list">
                         <h3 class="features-scroll">Современные технологии</h3>
                         <p class="features-description">
                             Значимость этих проблем настолько очевидна, что реализация
