--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
                 </ul>
             </nav>
             <ul class="list list-link">
-                <li class="cont-link logo-mail"><a href="mailto:info@devstudio.com" class="link contact-link">info@devstudio.com</a></li>
-                <li class="cont-link logo-phone"><a href="tel:+380961111111" class="link contact-link">+38 096 111 11 11</a></li>
+                <li class="cont-link"><a class="link contact-link" href="mailto:info@devstudio.com">
+                    <svg class="logo-mail">
+                    <use href="./images/logo/sprite.svg#mail"></use>
+                    </svg>
+                info@devstudio.com</a></li>
+                <li class="cont-link"><a class="link contact-link" href="tel:+380961111111">
+                    <svg class="logo-phone">
+                    <use href="./images/logo/sprite.svg#smartphone"></use>
+                    </svg>
+                +38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -97,21 +105,153 @@
                         <img src="./images/team/img1.jpg" width="270" height="260" alt="Игорь Демьяненко" />
                         <h3 class="command-name">Игорь Демьяненко</h3>
                         <p lang="en" class="command-jobs">Product Designer</p>
+                        <ul class="list social-icons">
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferer" aria-label="Instagram">
+                                <svg class="social-icons-svg">
+                                    <use href="./images/icons/sprite.svg#instagram"></use>
+                                </svg>
+                                </a>
+                            </li>
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://twitter.com/" target="_blank" rel="noopener noreferer" aria-label="Twitter">
+                                <svg class="social-icons-svg">
+                                    <use href="./images/icons/sprite.svg#twitter"></use>
+                                </svg>
+                                </a>
+                            </li>
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferer" aria-label="Facebook">
+                                <svg class="social-icons-svg">
+                                    <use href="./images/icons/sprite.svg#facebook"></use>
+                                </svg>
+                                </a>
+                            </li>
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferer" aria-label="Linkedin">
+                                <svg class="social-icons-svg">
+                                    <use href="./images/icons/sprite.svg#linkedin"></use>
+                                </svg>
+                                </a>
+                            </li>
+                        </ul> 
                     </li>
                     <li class="command-members">
                         <img src="./images/team/img2.jpg" width="270" height="260" alt="Ольга Репина" />
                         <h3 class="command-name">Ольга Репина</h3>
                         <p lang="en" class="command-jobs">Frontend Developer</p>
+                        <ul class="list social-icons">
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferer"
+                                    aria-label="Instagram">
+                                    <svg class="social-icons-svg">
+                                        <use href="./images/icons/sprite.svg#instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://twitter.com/" target="_blank" rel="noopener noreferer"
+                                    aria-label="Twitter">
+                                    <svg class="social-icons-svg">
+                                        <use href="./images/icons/sprite.svg#twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferer"
+                                    aria-label="Facebook">
+                                    <svg class="social-icons-svg">
+                                        <use href="./images/icons/sprite.svg#facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferer"
+                                    aria-label="Linkedin">
+                                    <svg class="social-icons-svg">
+                                        <use href="./images/icons/sprite.svg#linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="command-members">
                         <img src="./images/team/img3.jpg" width="270" height="260" alt="Николай Тарасов" />
                         <h3 class="command-name">Николай Тарасов</h3>
                         <p lang="en" class="command-jobs">Marketing</p>
+                        <ul class="list social-icons">
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferer"
+                                    aria-label="Instagram">
+                                    <svg class="social-icons-svg">
+                                        <use href="./images/icons/sprite.svg#instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://twitter.com/" target="_blank" rel="noopener noreferer"
+                                    aria-label="Twitter">
+                                    <svg class="social-icons-svg">
+                                        <use href="./images/icons/sprite.svg#twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferer"
+                                    aria-label="Facebook">
+                                    <svg class="social-icons-svg">
+                                        <use href="./images/icons/sprite.svg#facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferer"
+                                    aria-label="Linkedin">
+                                    <svg class="social-icons-svg">
+                                        <use href="./images/icons/sprite.svg#linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="command-members">
                         <img src="./images/team/img4.jpg" width="270" height="260" alt="Михаил Ермаков" />
                         <h3 class="command-name">Михаил Ермаков</h3>
                         <p lang="en" class="command-jobs">UI Designer</p>
+                        <ul class="list social-icons">
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferer"
+                                    aria-label="Instagram">
+                                    <svg class="social-icons-svg">
+                                        <use href="./images/icons/sprite.svg#instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://twitter.com/" target="_blank" rel="noopener noreferer"
+                                    aria-label="Twitter">
+                                    <svg class="social-icons-svg">
+                                        <use href="./images/icons/sprite.svg#twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferer"
+                                    aria-label="Facebook">
+                                    <svg class="social-icons-svg">
+                                        <use href="./images/icons/sprite.svg#facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-icons-items">
+                                <a class="social-icons-link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferer"
+                                    aria-label="Linkedin">
+                                    <svg class="social-icons-svg">
+                                        <use href="./images/icons/sprite.svg#linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -121,12 +261,48 @@
             <div class="container">
             <h2 class="section-title">Постоянные клиенты</h2>
                 <ul class="list clients-item">
-                    <li class="clients-companies"></li>
-                    <li class="clients-companies"></li>
-                    <li class="clients-companies"></li>
-                    <li class="clients-companies"></li>
-                    <li class="clients-companies"></li>
-                    <li class="clients-companies"></li> 
+                    <li class="clients-companies">
+                        <a class="clients-companies-link" href="">
+                            <svg class="clients-companies-logo" width="44" height="49"> 
+                                <use href="./images/clients-logo/sprite.svg#logo1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-companies">
+                        <a class="clients-companies-link" href="">
+                            <svg class="clients-companies-logo" width="40" height="52">
+                                <use href="./images/clients-logo/sprite.svg#logo2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-companies">
+                        <a class="clients-companies-link" href="">
+                            <svg class="clients-companies-logo" width="41" height="42">
+                                <use href="./images/clients-logo/sprite.svg#logo3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-companies">
+                        <a class="clients-companies-link" href="">
+                            <svg class="clients-companies-logo" width="79" height="42">
+                                <use href="./images/clients-logo/sprite.svg#logo4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-companies">
+                        <a class="clients-companies-link" href="">
+                            <svg class="clients-companies-logo" width="59" height="47">
+                                <use href="./images/clients-logo/sprite.svg#logo5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-companies">
+                        <a class="clients-companies-link" href="">
+                            <svg class="clients-companies-logo" width="88" height="45">
+                                <use href="./images/clients-logo/sprite.svg#logo6"></use>
+                            </svg>
+                        </a>
+                    </li> 
 
                 </ul>
             </div>
@@ -135,6 +311,7 @@
 
     <footer id="contacts">
         <div class="container footer">
+            <div>
             <a href="./index.html" class="link logo logo-footer"><span class="logo-web">Web</span><span class="logo-web-footer">Studio</span></a>
             <address class="footer-address">
                 <ul class="list link-styles">
@@ -149,6 +326,44 @@
                     </li>
                 </ul>
             </address>
+            </div>
+            <div class="footer-icons">
+                <h3 class="footer-icons-title">Присоединяйтесь</h3>
+                <ul class="list footer-social-icons">
+                    <li class="footer-social-icons-items">
+                        <a class="footer-social-icons-link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferer"
+                            aria-label="Instagram">
+                            <svg class="footer-social-icons-svg">
+                                <use href="./images/icons/sprite.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-icons-items">
+                        <a class="footer-social-icons-link" href="https://twitter.com/" target="_blank" rel="noopener noreferer"
+                            aria-label="Twitter">
+                            <svg class="footer-social-icons-svg">
+                                <use href="./images/icons/sprite.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-icons-items">
+                        <a class="footer-social-icons-link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferer"
+                            aria-label="Facebook">
+                            <svg class="footer-social-icons-svg">
+                                <use href="./images/icons/sprite.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-icons-items">
+                        <a class="footer-social-icons-link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferer"
+                            aria-label="Linkedin">
+                            <svg class="footer-social-icons-svg">
+                                <use href="./images/icons/sprite.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
