--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <header>
-        <div class="container header-container">
+    <header class="header">
+        <div class="container header-container"> 
             <a href="./index.html" class="link logo"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
             <nav class="navigation">
                 <ul class="menu list">
