--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="container header-container">
             <a href="./index.html" class="link logo"><span class="logo-web">Web</span><span
                     class="logo-studio">Studio</span></a>
